# ethereum-dashboard

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
backend/app/: main.py
