[tool.poetry]
name = "ethereum-dashboard"
version = "0.1.0"
description = "Ethereum Dashboard Application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
web3 = "^6.0.0"
redis = "^4.0.0"
sqlalchemy = "^1.4.0"
alembic = "^1.7.0"
python-dotenv = "^0.19.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
mypy = "^0.910"
pre-commit = "^2.15.0"
